--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,10 @@
 <div>
     <div>
         <div>
-            <!-- Таблица книг -->
+            {% include "partial_create_book_form.html" %}
 
+            <!-- Таблица книг -->
+            
             <table>
                 <thead>
                 <tr>
