--- a/templates/partial_book_detail.html
+++ b/templates/partial_book_detail.html
@@ -22,14 +22,20 @@
     <!-- Ячейка состояния -->
     <td>
         {% if not book.read %}
-            <!-- Кнопка "Unread" -->
-            <button class="disbtn">
-                Unread
-            </button>
+        <!-- Кнопка "Unread" -->
+        <button class="disbtn"
+                hx-put="{% url 'update_book_status' book.id %}"
+                hx-target="closest tr"
+                hx-swap="outerHTML" >
+            Unread
+        </button>
         {% else %}
-            <!-- Кнопка "Read" -->
-            <button class="disbtn">
-                Read
+        <!-- Кнопка "Read" -->
+        <button class="disbtn"
+                hx-put="{% url 'update_book_status' book.id %}"
+                hx-target="closest tr"
+                hx-swap="outerHTML" >
+            Read
             </button>
         {% endif %}
     </td>
