--- a/templates/partial_book_update_form.html
+++ b/templates/partial_book_update_form.html
@@ -1,53 +1,55 @@
-<tr>
+<tr class="{% if book.read %}grey-text{% endif %}">
     <!-- Ячейка номера книги -->
-    <td>
+    <td class="align-middle text-center ps-2">
         {{ book.id }}
     </td>
 
     <!-- Ячейка названия книги -->
-    <td>
+    <td class="align-middle ps-2">
         {{ form.title }}
     </td>
 
     <!-- Ячейка автора книги -->
-    <td>
+    <td class="align-middle ps-2">
         {{ form.author }}
     </td>
 
     <!-- Ячейка цены книги -->
-    <td>
+    <td class="align-middle text-center">
         {{ form.price }}
     </td>
 
     <!-- Ячейка состояния -->
-    <td>
+    <td class="align-middle text-center">
         {% if not book.read %}
             <!-- Кнопка "Unread" -->
-            <button disabled>
+            <button class="table-button status-button btn btn-primary btn-sm" disabled>
                 Unread
             </button>
         {% else %}
             <!-- Кнопка "Read" -->
-            <button disabled>
+            <button class="table-button status-button btn btn-secondary btn-sm" disabled>
                 Read
             </button>
         {% endif %}
     </td>
 
     <!--  Ячейка кнопок действия -->
-    <td>
+    <td class="align-middle text-center">
         <!-- Кнопка "Save" -->
         <button type="submit"
+                class="table-button any-button btn btn-success btn-sm me-2"
                 hx-post="{% url 'update_book_details' book.id %}"
                 hx-target="closest tr"
                 hx-swap="outerHTML"
-                hx-include="closest tr" >
+                hx-include="closest tr">
             Save
         </button>
         <!-- Кнопка "Cancel" -->
-        <button hx-get="{% url 'book_detail' book.id %}"
+        <button class="table-button any-button btn btn-warning btn-sm"
+                hx-get="{% url 'book_detail' book.id %}"
                 hx-target="closest tr"
-                hx-swap="outerHTML" >
+                hx-swap="outerHTML">
             Cancel
         </button>
     </td>
