--- a/templates/partial_create_book_form.html
+++ b/templates/partial_create_book_form.html
@@ -1,18 +1,18 @@
-<form>
-    <div>
-        <div>
+<form class="form-inline">
+    <div class="row">
+        <div class="col">
             {{ form.title }}
         </div>
 
-        <div>
+        <div class="col">
             {{ form.author }}
         </div>
 
-        <div>
+        <div class="col">
             {{ form.price }}
         </div>
 
-        <div>
+        <div class="col">
             <!-- Кнопка "Add book" -->
             <button type="submit"
                     class="disbtn btn btn-primary"
